--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http:://ashleyyytjh.github.io/ashleytjh.github.io",
+  "homepage": "https://ashleyyytjh.github.io",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
